# runner

./: .ai-fs-permissions.yaml  .gitignore  .worktree.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cspell.json
.cargo-husky/hooks/: pre-commit  pre-push
.centy/: .centy-manifest.json  README.md  config.json  cspell.json  organization.json
.centy/docs/: config.yaml
.centy/issues/: 08a2a6e0-8fa7-4ff0-8ae7-9ec4cc1d9573.md  090c3889-312e-48b9-af80-87df596f1cff.md  0e74a7be-6925-48c1-aa2d-622f8d1ce6c2.md  10b703d8-9fe9-464e-8c6b-8a5635b025b6.md  17dd7bd1-3b6f-4a9b-b49a-f3f4f5831e6e.md  1b711540-b8b9-460a-ae9e-2962b4837976.md  231b42ee-3d05-4ccd-a04a-d5bf334d7bd2.md  2611e647-5977-4943-a51d-1bfbf22f2027.md  26628c37-d19f-4566-b06e-064ff2478024.md  30b8dced-98ba-4742-9a20-295d57c29da1.md  367dd0a4-0bd0-40a0-8528-32655cd609f5.md  36cde607-aa88-408b-807e-583cb2e859f5.md  3e05fe27-cf67-468a-b082-48edc53ddf67.md  48321d47-03a5-47c8-abfb-56c4cf907d1b.md  4ec1ed2f-a6d7-42bc-8bd0-f345ff80244d.md  5360b31e-eee5-4e5b-b97f-bff84b80f510.md  550bcacd-6069-4735-ad02-5ab0ef7c4546.md  5702708c-716d-4edc-ad72-c83bde1e514d.md  5abc216e-1f17-4bcd-8208-e7e88c981dde.md  5bb18654-7507-4be4-a126-ecfddd480f11.md  5f54d552-0441-4bfe-9fa8-54ab5ca8e15d.md  60146ad8-c937-4812-97b4-1aeba71a9115.md  6098ba73-2f93-4f46-b706-796c041399ba.md  697e139d-da4f-40d2-b87b-5da7f314d546.md  6cc65408-84c2-405b-b7a9-4d6d3b8ec559.md  745aff1f-5b1e-4ba0-ab85-e4c7337b0779.md  7b6ead8d-3d11-44fc-83d2-991253ca5949.md  804b3544-e158-40e4-8213-a5097fa0ffcb.md  86e6aed0-8561-49e8-8bd6-d60f4cefe4dd.md  8fdcbeb7-fc9e-4d20-9507-0391464aba92.md  9a5dec6a-d6d8-4787-a3a6-aa81530e6814.md  9b5f006e-7666-4ede-b09e-48b1f89ccdcf.md  9cad7a4b-9426-4788-9dbc-e784df999053.md  README.md  b9e193a1-faad-49ca-8b83-9e54e292def2.md  bb541ebc-4201-4aa6-b5fc-98a345611ed2.md  bfb16133-333e-46e8-961a-304a3becc4d6.md  c46ca239-60d7-4e82-abc7-38111d9e3846.md  c62e6036-a638-486d-8669-cc5d17ac598a.md  c68a8f17-d1d7-4356-9668-80f453692b1e.md  (+17 more)
.centy/personas/: config.yaml  developer-mixed-repos-three-with-issues-one-context-only.md  full-stack-developer.md  github-developer-one-issue-four-repos.md  github-developer-per-repo-issues-under-a-parent-issue.md  jira-developer-one-ticket-several-repos.md  platform-microservices-engineer.md
.centy/stories/: config.yaml  open-a-workspace-with-three-issue-linked-repos-and-one-context-only-repo.md  open-different-issues-per-repo-in-a-shared-workspace.md  open-four-repos-from-one-github-issue-url.md  open-one-issue-across-multiple-repos-in-a-unified-workspace.md  open-per-repo-issues-that-all-belong-to-one-parent-issue.md  open-repos-from-a-jira-ticket-reference.md  run-per-repo-setup-hooks-when-opening-a-multi-repo-workspace.md
.centy/templates/: README.md
.claude/: settings.json
.github/workflows/: docker-snapshot.yml  release.yml  worktree.yml
agent-runner/: .env.example  README.md  package.json
agent-runner/src/: index.js
assets/: applet.icns  config.toml  workspaces.toml  worktree.toml
docker/: Dockerfile.test
scripts/: test-docker.sh
src/: cli.rs  cli_tests.rs  config.rs  daemon.rs  git.rs  hooks.rs  hooks_ctx.rs  hooks_env_tests.rs  hooks_multiline_tests.rs  hooks_tests.rs  issue.rs  lib.rs  main.rs  multi_workspace.rs  name_gen.rs  opener.rs  repo_hooks.rs  repo_hooks_load_tests.rs  repo_hooks_parse.rs  repo_hooks_parse_tests.rs  repo_hooks_scaffold.rs  repo_hooks_scaffold_tests.rs  repo_hooks_tests.rs  scheme.rs  templates.rs  ttl.rs  ttl_tests.rs  workspace.rs  workspace_tests.rs
src/commands/: config.rs  list.rs  mod.rs  open.rs  open_multi.rs  prune.rs  prune_tests.rs  restore.rs  scheme.rs  setup.rs
src/commands/open/: editor.rs  hook_build.rs  (+5 more)
src/config/: mod.rs  mod_tests.rs  ops.rs  ops_auto_prune_tests.rs  ops_get_set.rs  ops_temp_tests.rs  ops_tests.rs  ser.rs  ser_multiline_tests.rs  ser_tests.rs  ser_workspace_tests.rs
src/git/: branch.rs  clone.rs  local_branch.rs  mod.rs  prune.rs  remote.rs
src/issue/: adhoc_env_tests.rs  adhoc_tests.rs  azure_paths_tests.rs  azure_tests.rs  deep_link.rs  def.rs  gitlab_tests.rs  impls.rs  jira_tests.rs  linear_tests.rs  local_tests.rs  mod.rs  multi_dir_name_tests.rs  parse.rs  parse_tests.rs  paths.rs  paths_tests.rs  remote_branch_tests.rs  tests.rs  uuid_tests.rs
src/opener/: available_entries.rs  detect.rs  editor.rs  entries.rs  is_available.rs  mod.rs  opener_tests.rs  shell.rs  shell_tests.rs  terminal.rs  terminal_tests.rs  wt.rs
src/scheme/: dispatch.rs  linux.rs  macos.rs  mod.rs  scheme_tests.rs  windows.rs
src/ttl/: mod.rs  prune_tests.rs  registry.rs  registry_tests.rs  serde_tests.rs  ttl_tests.rs
tests/: cli.rs  git.rs  snapshot_tests.rs
tests/snapshots/: snapshot_tests__config_toml_all_fields.snap  snapshot_tests__config_toml_default_content.snap  snapshot_tests__config_toml_path_suffix.snap  snapshot_tests__workspaces_toml_empty_content.snap  snapshot_tests__workspaces_toml_path_suffix.snap  snapshot_tests__worktree_toml_scaffold_content.snap
(+31 files in other folders)
